# api/openapi-1.yaml
@@ -37,6 +37,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HelpResponse'
+
+        '400':
+          description: internal error issue
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
         '500':
           description: internal error issue
           content:
